<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, INF5750Assignment3Activity!</string>
    <string name="app_name">DHIS2</string>
    <string name="launch_map">Launch Map</string>
    <string name="launch_diagram">Launch Diagram</string>
    <string name="launch_messaging">Launch Messaging</string>
    <string name="hello_test">My Test String</string>
    <string name="login_button">Login</string>
    <string name="launch_interpretation">Launch Interpretation</string>
    <string name="login_username">Username:</string>
    <string name="login_password">Password:</string>
    <string name="messaging">Messaging</string>
    <string name="interpretation_header">Interpretation</string>
    <string name="btnGetInterpretedChart">Update</string>
    <string name="addInterpretation">Add</string>
    <string name="interpretation_textFieldName">Add Interpretation</string>
    <string name="message_unread_button">Mark as unread</string>
    <string name="message_remove_button">Remove</string>
    <string name="message_back_button">Back</string>
    <string name="message_reply_button">Reply</string>
    <string name="mainmenu_headerlabel">Where do you want to go?</string>
    <string name="dashboard_nextpage">Next</string>
    <string name="dashboard_prevpage">Previous</string>
    <string name="dashboardchart_chartcontent">Chart</string>
    <string name="dashboardchart_clear">Clear</string>
    <string name="dashboardchart_share">Share</string>
    <string name="dashboardchart_insert">Insert</string>
    <string name="interpretation_Container">Resource Container</string>
    <string name="replydialog_label">Reply</string>
    <string name="general_notimplemented">Functionality not implemented</string>
    <string name="dashboard_header">Dashboard</string>
    <string name="dashboard_pageNumPlaceholder">Page ?/?</string>

</resources>