<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Blue"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/layout_imageContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
        android:id="@+id/txtInterpretations"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/txtInterpretation_1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/interpretation_textFieldName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edtxtInterpretation_interpretation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" >
    </EditText>

    <LinearLayout
        android:id="@+id/layout_btnContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnInterpretation_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addInterpretation" />

        <Button
            android:id="@+id/btnInterpretation_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnGetInterpretedChart" />

    </LinearLayout>

</LinearLayout>